--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@
             </ul>
         </section>
         <aside>
-            <img src="https://via.placeholder.com/200x100">
+            <div class="flex">
+                <h2>Sem van elteren</h2>
+                <img src="https://via.placeholder.com/400x400" alt="">
+                <h3>skills</h3>
+                <ul>  
+                  <li>
+                    HTML
+                  </li>
+                  <li>
+                    CSS
+                  </li>
+                  <li>
+                    Javascript
+                  </li>
+                </ul>
+                <p>1069524@hr.nl</p>
+              </div>
         </aside>
         <section>
             <h3 id="leren">wat wil ik leren</h3>
