html / css for week 1.4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <a href="#hobby">hobbies</a>
-            <a href="leren">leren</a>
+            <a href="#leren">leren</a>
         </nav>
 
         <h1>Hallo miin naam is Sem</h1>
@@ -21,8 +21,6 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda repellat iure voluptate, incidunt cum voluptatum! Dolores suscipit maiores possimus sapiente reiciendis repudiandae nobis cupiditate dolorem excepturi? Quam labore eum facilis.
         </p>
     </header>
-
-    <body>
         <section>
             <h2 id="hobby">mijn hobbies</h2>
             <ul>
@@ -40,8 +38,31 @@
         <aside>
             <div class="flex">
                 <h2>Sem van elteren</h2>
-                <img src="https://via.placeholder.com/400x400" alt="">
-                <h3>skills</h3>
+                <img src="img/IMG_1480.JPG" alt="sem-van-elteren">
+                <h3>Info</h3>
+                <ul>  
+                  <li>
+                    leeftijd:  21
+                  </li>
+                  <li>
+                    Geboorteplek:  Breda
+                  </li>
+                  <li>
+                    Favoriete game:  Cyberpunk 2077
+                  </li>
+                </ul>
+                <p>1069524@hr.nl</p>
+              </div>
+        </aside>
+        <section>
+            <h3 id="leren">Wat wil ik leren</h3>
+            <ul>
+                <li>
+                    designen
+                </li>
+                <li>programeren</li>
+            </ul>
+            <h3>Skills</h3>
                 <ul>  
                   <li>
                     HTML
@@ -53,20 +74,7 @@
                     Javascript
                   </li>
                 </ul>
-                <p>1069524@hr.nl</p>
-              </div>
-        </aside>
-        <section>
-            <h3 id="leren">wat wil ik leren</h3>
-            <ul>
-                <li>
-                    designen
-                </li>
-                <li>programeren</li>
-            </ul>
         </section>
-
-    </body>
 
     <footer>
         <a href="https://www.linkedin.com/in/sem-van-elteren-5b50b31ab/">LinkedIn</a>
