added css and changed page layout

--- a/index.html
+++ b/index.html
@@ -2,83 +2,97 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Portfolio Sem</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="#hobby">hobbies</a>
-            <a href="#leren">leren</a>
-        </nav>
+  <header>
+    <nav>
+      <a href="#">home</a>
+      <a href="#hobby">Hobbies</a>
+      <a href="#leren">Leren</a>
+      <a href="#skills">Skills</a>
+    </nav>
+    <div class="hero">
+      <h1>Hallo mijn naam is Sem</h1>
 
-        <h1>Hallo miin naam is Sem</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda repellat iure voluptate, incidunt cum
+        voluptatum! Dolores suscipit maiores possimus sapiente reiciendis repudiandae nobis cupiditate dolorem
+        excepturi? Quam labore eum facilis.
+      </p>
+    </div>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda repellat iure voluptate, incidunt cum voluptatum! Dolores suscipit maiores possimus sapiente reiciendis repudiandae nobis cupiditate dolorem excepturi? Quam labore eum facilis.
-        </p>
-    </header>
-        <section>
-            <h2 id="hobby">mijn hobbies</h2>
-            <ul>
-                <li>
-                    gamen
-                </li>
-                <li>
-                    fitness
-                </li>
-                <li>
-                    chillen met vrienden
-                </li>
-            </ul>
-        </section>
-        <aside>
-            <div class="flex">
-                <h2>Sem van elteren</h2>
-                <img src="img/IMG_1480.JPG" alt="sem-van-elteren">
-                <h3>Info</h3>
-                <ul>  
-                  <li>
-                    leeftijd:  21
-                  </li>
-                  <li>
-                    Geboorteplek:  Breda
-                  </li>
-                  <li>
-                    Favoriete game:  Cyberpunk 2077
-                  </li>
-                </ul>
-                <p>1069524@hr.nl</p>
-              </div>
-        </aside>
-        <section>
-            <h3 id="leren">Wat wil ik leren</h3>
-            <ul>
-                <li>
-                    designen
-                </li>
-                <li>programeren</li>
-            </ul>
-            <h3>Skills</h3>
-                <ul>  
-                  <li>
-                    HTML
-                  </li>
-                  <li>
-                    CSS
-                  </li>
-                  <li>
-                    Javascript
-                  </li>
-                </ul>
-        </section>
+  </header>
+  <main>
+    <div class="flex">
+      <section class="information">
+        <h2 id="hobby">mijn hobbies</h2>
+        <ul>
+          <li>
+            gamen
+          </li>
+          <li>
+            fitness
+          </li>
+          <li>
+            chillen met vrienden
+          </li>
+        </ul>
 
-    <footer>
-        <a href="https://www.linkedin.com/in/sem-van-elteren-5b50b31ab/">LinkedIn</a>
-    </footer>
+        <h3 id="leren">Wat wil ik leren</h3>
+        <ul>
+          <li>
+            designen
+          </li>
+          <li>programeren</li>
+        </ul>
+        <h3 id="skills">Skills</h3>
+        <ul>
+          <li>
+            HTML
+          </li>
+          <li>
+            CSS
+          </li>
+          <li>
+            Javascript
+          </li>
+        </ul>
+      </section>
+      <aside class="info-card">
+
+        <h2>Sem van Elteren</h2>
+        <img src="img/IMG_1480.JPG" alt="sem-van-elteren">
+        <h3>Info</h3>
+        <ul>
+          <li>
+            leeftijd: 21
+          </li>
+          <li>
+            Geboorteplek: Breda
+          </li>
+          <li>
+            Favoriete game: CyberPunk 2077
+          </li>
+        </ul>
+        <p>1069524@hr.nl</p>
+
+      </aside>
+    </div>
+    <section class="work">
+      <h2>Mijn projecten</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta consequuntur modi dolore, provident tenetur
+        voluptatum, sit minus, unde ipsam aspernatur tempore perferendis dolorem neque enim inventore repellendus ea ab
+        similique.</p>
+    </section>
+  </main>
+  <footer>
+    <a href="https://www.linkedin.com/in/sem-van-elteren-5b50b31ab/">LinkedIn</a>
+  </footer>
 </body>
 
 </html>
