added portfolio works and media queries

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body>
   <header>
     <nav>
-      <a href="#">home</a>
-      <a href="#hobby">Hobbies</a>
-      <a href="#leren">Leren</a>
-      <a href="#skills">Skills</a>
+      <a href="#">Home</a>
+      <a href="#hobby">Informatie</a>
+      <a href="#work">Projecten</a>
     </nav>
     <div class="hero">
       <h1>Hallo mijn naam is Sem</h1>
@@ -30,7 +29,7 @@
   <main>
     <div class="flex">
       <section class="information">
-        <h2 id="hobby">mijn hobbies</h2>
+        <h2 id="hobby">Mijn hobbies</h2>
         <ul>
           <li>
             gamen
@@ -51,6 +50,7 @@
           <li>programeren</li>
         </ul>
         <h3 id="skills">Skills</h3>
+        <p>Programmeertalen geordend op basis van hoe veel ervaring ik ermee heb</p>
         <ul>
           <li>
             HTML
@@ -59,8 +59,18 @@
             CSS
           </li>
           <li>
+            SQL
+          </li>
+          <li>
+            PHP
+          </li>
+          <li>
             Javascript
           </li>
+          <li>
+            C#
+          </li>
+          <li>Java</li>
         </ul>
       </section>
       <aside class="info-card">
@@ -70,7 +80,7 @@
         <h3>Info</h3>
         <ul>
           <li>
-            leeftijd: 21
+            Leeftijd: 21
           </li>
           <li>
             Geboorteplek: Breda
@@ -83,11 +93,32 @@
 
       </aside>
     </div>
-    <section class="work">
+    <section class="work" id="work">
       <h2>Mijn projecten</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta consequuntur modi dolore, provident tenetur
-        voluptatum, sit minus, unde ipsam aspernatur tempore perferendis dolorem neque enim inventore repellendus ea ab
-        similique.</p>
+      <p class="work-text">Deze sectie zal gevuld worden met projecten die ik maak.</p>
+      <div class="projects">
+        <a href="#" class="project one">
+          <h3>Voorbeeld</h3>
+          <img src="#" alt="voorbeeld-img">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
+            Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
+            eveniet.</p>
+        </a>
+        <a href="#" class="project two">
+          <h3>Voorbeeld</h3>
+          <img src="#" alt="voorbeeld-img">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
+            Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
+            eveniet.</p>
+        </a>
+        <a href="#" class="project three">
+          <h3>Voorbeeld</h3>
+          <img src="#" alt="voorbeeld-img">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
+            Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
+            eveniet.</p>
+        </a>
+      </div>
     </section>
   </main>
   <footer>
