added images to the projects

--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
       <div class="projects">
         <a href="#" class="project one">
           <h3>Voorbeeld</h3>
-          <img src="#" alt="voorbeeld-img">
+          <img src="/img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
             Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
             eveniet.</p>
         </a>
         <a href="#" class="project two">
           <h3>Voorbeeld</h3>
-          <img src="#" alt="voorbeeld-img">
+          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
             Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
             eveniet.</p>
         </a>
         <a href="#" class="project three">
           <h3>Voorbeeld</h3>
-          <img src="#" alt="voorbeeld-img">
+          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
             Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
             eveniet.</p>
