added a form + small changes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       <a href="#">Home</a>
       <a href="#hobby">Informatie</a>
       <a href="#work">Projecten</a>
+      <a href="#form">Contact</a>
     </nav>
     <div class="hero">
       <h1>Hallo mijn naam is Sem</h1>
-
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda repellat iure voluptate, incidunt cum
-        voluptatum! Dolores suscipit maiores possimus sapiente reiciendis repudiandae nobis cupiditate dolorem
-        excepturi? Quam labore eum facilis.
+      <p>Ik ben Sem een Student aan de hogeschool Rotterdam. Op deze Portfolio website kun je meer over mij leren. Ook
+        kan je zien wat voor projecten ik op school gemaakt heb.
       </p>
     </div>
 
@@ -100,25 +99,44 @@
         <a href="#" class="project one">
           <h3>Voorbeeld</h3>
           <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
-            Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
-            eveniet.</p>
+          <p>Dit is een placeholder.</p>
         </a>
         <a href="#" class="project two">
           <h3>Voorbeeld</h3>
           <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
-            Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
-            eveniet.</p>
+          <p>Dit is een placeholder.</p>
         </a>
         <a href="#" class="project three">
           <h3>Voorbeeld</h3>
           <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, optio esse iure quo totam ullam!
-            Distinctio pariatur aut rerum, excepturi blanditiis quia accusantium quae harum atque officia sed, dolor
-            eveniet.</p>
+          <p>Dit is een placeholder.</p>
+        </a>
+        <a href="#" class="project four">
+          <h3>Voorbeeld</h3>
+          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
+          <p>Dit is een placeholder.</p>
         </a>
       </div>
+    </section>
+    <section class="form" id="form">
+      <h2>Contact Formulier</h2>
+      <form action="" method="post">
+        <label for="name">Naam</label>
+        <input type="text" name="name" id="name" required>
+        <label for="lastname">Achternaam</label>
+        <input type="text" name="lastname" id="lastname"  required>
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email"  required>
+        <label for="reason">Waarvoor</label>
+        <select name="reason" id="reason" required>
+          <option value="per">Persoonlijk</option>
+          <option value="work">Werk</option>
+          <option value="anders">Anders</option>
+        </select>
+        <label for="textarea">Leg uit waarvoor</label>
+        <textarea name="textarea" id="textarea"  required></textarea>
+        <input type="submit" name="submit" id="submit" value="Versturen">
+      </form>
     </section>
   </main>
   <footer>
