--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
       <h2>Mijn projecten</h2>
       <p class="work-text">Deze sectie zal gevuld worden met projecten die ik maak.</p>
       <div class="projects">
-        <a href="#" class="project one">
+        <a href="project-1.html" class="project one">
           <h3>Voorbeeld</h3>
-          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Dit is een placeholder.</p>
+          <img src="img/minecraft-steve.jpg" alt="minecraft-steve">
+          <p>De waterinator: minecraft steve editie</p>
         </a>
         <a href="#" class="project two">
           <h3>Voorbeeld</h3>
