updated projects and index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <header>
     <nav>
       <a href="#">Home</a>
-      <a href="#hobby">Informatie</a>
+      <a href="#hobby">Informatie / contact</a>
       <a href="#work">Projecten</a>
-      <a href="#form">Contact</a>
     </nav>
     <div class="hero">
       <h1>Hallo mijn naam is Sem</h1>
@@ -85,8 +84,18 @@
             Geboorteplek: Breda
           </li>
           <li>
+            email: sem407@duck.com
+          </li>
+          <li>
+            Studie: HBO CMGT
+          </li>
+          <li>
+            email: sem407@duck.com
+          </li>
+          <li>
             Favoriete game: CyberPunk 2077
           </li>
+
         </ul>
         <p>1069524@hr.nl</p>
 
@@ -97,46 +106,26 @@
       <p class="work-text">Deze sectie zal gevuld worden met projecten die ik maak.</p>
       <div class="projects">
         <a href="project-1.html" class="project one">
-          <h3>Voorbeeld</h3>
+          <h3>waterinator</h3>
           <img src="img/minecraft-steve.jpg" alt="minecraft-steve">
           <p>De waterinator: minecraft steve editie</p>
         </a>
-        <a href="#" class="project two">
-          <h3>Voorbeeld</h3>
-          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Dit is een placeholder.</p>
+        <a href="project-2.html" class="project two">
+          <h3>Bincbarbers</h3>
+          <img src="img/hero-img.jpg" alt="voorbeeld-img">
+          <p>afspraak systeem voor een kapper</p>
         </a>
-        <a href="#" class="project three">
-          <h3>Voorbeeld</h3>
-          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Dit is een placeholder.</p>
+        <a href="project-3.html" class="project three">
+          <h3>Blinfo</h3>
+          <img src="img/blinfo-hero.jpg" alt="voorbeeld-img">
+          <p>Blinfo, de site met informatie over slechtziende</p>
         </a>
-        <a href="#" class="project four">
-          <h3>Voorbeeld</h3>
-          <img src="img/cyberpunk-rain-city-pixel-thumb.jpg" alt="voorbeeld-img">
-          <p>Dit is een placeholder.</p>
+        <a href="project-4.html" class="project four">
+          <h3>Park Plaag</h3>
+          <img src="img/parkplaag-menu.png" alt="voorbeeld-img">
+          <p>De beste towerdefense van Rotterdam!</p>
         </a>
       </div>
-    </section>
-    <section class="form" id="form">
-      <h2>Contact Formulier</h2>
-      <form action="" method="post">
-        <label for="name">Naam</label>
-        <input type="text" name="name" id="name" required>
-        <label for="lastname">Achternaam</label>
-        <input type="text" name="lastname" id="lastname"  required>
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="email"  required>
-        <label for="reason">Waarvoor</label>
-        <select name="reason" id="reason" required>
-          <option value="per">Persoonlijk</option>
-          <option value="work">Werk</option>
-          <option value="anders">Anders</option>
-        </select>
-        <label for="textarea">Leg uit waarvoor</label>
-        <textarea name="textarea" id="textarea"  required></textarea>
-        <input type="submit" name="submit" id="submit" value="Versturen">
-      </form>
     </section>
   </main>
   <footer>
