--- a/project-1.html
+++ b/project-1.html
@@ -6,16 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Portfolio Sem</title>
+  <title>project - Waterinator</title>
 </head>
 
 <body>
   <header>
     <nav>
       <a href="#">Home</a>
-      <a href="#hobby">Informatie</a>
+      <a href="#hobby">Informatie / contact</a>
       <a href="#work">Projecten</a>
-      <a href="#form">Contact</a>
     </nav>
     <div class="hero">
       <h1>De waterinator</h1>
